--- a/util/views/auth/login.ejs
+++ b/util/views/auth/login.ejs
@@ -5,12 +5,9 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-    
+
     <main>
-            <% if (errorMessage) { %>
-                <div class="user-message user-message--error"><%= errorMessage %></div>
-            <% } %>
-        <form class="login-form" action="/signup" method="POST">
+        <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
@@ -19,12 +16,8 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Signup</button>
+            <button class="btn" type="submit">Login</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
