--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -10,18 +10,15 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/postNewPassword" method="POST">
-           
+        <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="hidden" name="userId" value="<%= userId %>">
             <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Update Password</button>
         </form>
-       
-       
     </main>
 <%- include('../includes/end.ejs') %>
