--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -28,11 +28,11 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
+                                    <!-- <form action="/admin/delete-product" method="POST"> -->
                                         <input type="hidden" value="<%= product._id %>" name="productId">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                        <button class="btn" type="submit">Delete</button>
-                                    </form>
+                                        <button class="btn" type="submit" onclick="deleteProduct(this)">Delete</button>
+                                    <!-- </form> -->
 
                                 </div>
                             </article>
@@ -42,4 +42,6 @@
                         <h1>No Products Found!</h1>
                         <% } %>
             </main>
+            <script type="text/javascript" src="/js/admin.js"></script>
+
             <%- include('../includes/end.ejs') %>
